# HeadPose

./: CMakeLists.txt  LICENSE  README.md
headpose/cmd/: CMakeLists.txt  HeadPose.cpp  HeadPose.h  HeadPoseExtern.cpp  HeadPoseExtern.h  main.cpp
headpose/lib/: utils.cpp  utils.h
lib/: CMakeLists.txt  cvx.cpp
